--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Awesome game</title>
+  <title>Lost Shadow</title>
   <meta charset="utf-8">
 
   <link href="styles.css" rel="stylesheet" type="text/css">
@@ -15,9 +15,7 @@
 <body>
   <header>
     <a href="https://www.github.com/gituser/awesome-game">
-      <img style="position: absolute; top: 0; right: 0; border: 0;"
-        src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"
-        alt="Fork me on GitHub">
+     
     </a>
   </header>
 
@@ -26,8 +24,17 @@
   </main>
 
   <footer>
-    <p><strong>Awesome game</strong><br>
-      by <a href="http://github.com/gituser">gituser</a></p>
+    <div class="content-box-purple"> -Controles - <br>
+    - Movimiento: Cursores direccionales <br>
+    -Salto: Barra Espaciadora <br> 
+    -Ocultarse: Pulsar E (En una sombra) <br>
+    </div>
+    
+    <p><strong>Lost Shadow</strong><br> 
+      by <a href="http://github.com/DPerezLuque">Daniel Pérez Luque</a>
+      and <a href="http://github.com/daquinte">Daniel Quintero Bernal</a>
+
+    </p>
     <p class="license">Published under the <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike</a>
       license.</p>
   </footer>
