Cambios a la página web

--- a/src/index.html
+++ b/src/index.html
@@ -24,13 +24,22 @@
   </main>
 
   <footer>
-    <div class="content-box-purple"> -Controles - <br>
-    - Movimiento: Cursores direccionales <br>
+    <p class="content-box-purple"> CONTROLES<br><br>
     -Salto: Barra Espaciadora <br> 
+    -Movimiento: Cursores direccionales <br>
     -Ocultarse: Pulsar E (En una sombra) <br>
-    </div>
     
-    <p><strong>Lost Shadow</strong><br> 
+    </p>
+
+    <p class = "caja-versos"> Un corazón que se torna oscuro, <br>
+      no sentirte es dejarse caer. <br>
+      Entre sombras, mi camino. <br>
+      Lucharé por encontrarte<br>
+      y abrazaré tu amanecer. <br>
+    </p>
+
+
+    <p class = "caja"><strong>Lost Shadow</strong><br> 
       by <a href="http://github.com/DPerezLuque">Daniel Pérez Luque</a>
       and <a href="http://github.com/daquinte">Daniel Quintero Bernal</a>
 
